# google-auth-wrapper

./: Makefile  README.md  pyproject.toml
.trunk/: trunk.yaml
dev/: build.sh  setup.sh
example/: .env.template  google_oauth_streamlit.py
src/google_auth_wrapper/: streamlit.py
tests/: test_streamlit.py
